--- a/html/desk.html
+++ b/html/desk.html
@@ -60,32 +60,12 @@
     <script src="jQuery/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
     <script type="text/javascript" src="gen/EcosystemScience.js"></script>
 
-    <!-- plugins, Application current theme -->
-    <script type="text/javascript" src="gen/Gmsh.js"></script>
-    <script type="text/javascript" src="gen/Correli.js"></script>
-    <script type="text/javascript" src="gen/UnvReader2D.js"></script>
-    <script type="text/javascript" src="gen/UnvReader3D.js"></script>
-    <script type="text/javascript" src="gen/Scult2D.js"></script>
-    <script type="text/javascript" src="gen/Scult3D.js"></script>
-    <script type="text/javascript" src="gen/Scills3D.js"></script>
-    <script type="text/javascript" src="gen/FieldsComparator.js"></script>
-    <script type="text/javascript" src="gen/StepReader.js"></script>
-    <script type="text/javascript" src="gen/Function.js"></script>
-    <script type="text/javascript" src="gen/CsvReader.js"></script>
-    <script type="text/javascript" src="gen/Scilab.js"></script>
-    <script type="text/javascript" src="gen/Acquisition.js"></script>
+    <!-- plugins, Application current theme -->  
     <script type="text/javascript" src="gen/Test.js"></script>
-    <script type="text/javascript" src="gen/CRM.js"></script>
-    <script type="text/javascript" src="gen/TestA.js"></script>
 
-    <!--IPOL-->
-    <script type="text/javascript" src="gen/IpolACE.js"></script>
-    <script type="text/javascript" src="gen/IpolLSD.js"></script>
-    <script type="text/javascript" src="gen/IpolSCA.js"></script>
-    <script type="text/javascript" src="gen/IpolTVD.js"></script>
 
     <!--  code de suivi google analytics  -->
-    <script>
+    <!--<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -94,7 +74,7 @@
       ga('create', 'UA-52766606-1', 'auto');
       ga('send', 'pageview');
       
-    </script>
+    </script>-->
 
   <body onload=" load_if_cookie_desk();">
   
